--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -101,5 +101,52 @@ button, input {
     }
 }
 
+#setup-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 1rem;
+    height: 100%;
 
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    gap: 1rem;
+    .grid-container {
+        h2 {
+            text-align: center;
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+            font-weight: 600;
+        }
+
+        .grid {
+            .row {
+                display: flex;
+                
+
+                .cell {
+                    flex-shrink: 0;
+                    width: 28px;
+                    height: 28px;
+                    border: 1px solid white;
+                }
+            }
+        }
+    }
+
+    .axis-container {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+
+        h2 {
+            font-size: 1.3rem;
+        }
+
+        button {
+            border-radius: 1rem;
+            padding: 0.5rem;
+        }
+    }
+}
 
