--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -130,6 +130,14 @@ button, input {
                     height: 28px;
                     border: 1px solid white;
                 }
+
+                .hover-effect {
+                    background-color: #f2f2f2;
+                }
+
+                .cell-error {
+                    background-color: #c57b7bb8;
+                }
             }
         }
     }
