Ships are now placable

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -138,6 +138,10 @@ button, input {
                 .cell-error {
                     background-color: #c57b7bb8;
                 }
+
+                .ship {
+                    background-color: #f2f2f2;
+                }
             }
         }
     }
