--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,6 +6,7 @@ $body: #1B2430;
 $container: #51557E;
 $text: #D6D5A8;
 $clickable: #694d81;
+$ship: #b4cef6;
 
 
 body {
@@ -94,11 +95,11 @@ button, input {
             width: 2rem;
         }
     }
+}
 
-    #start-button:hover, #start-button:focus {
-        transform: scale(0.95);
-        transition: transform 1s;
-    }
+button:hover, button:focus {
+    transform: scale(0.95);
+    transition: transform 350ms ease-in-out;
 }
 
 #setup-container {
@@ -132,7 +133,7 @@ button, input {
                 }
 
                 .hover-effect {
-                    background-color: #f2f2f2;
+                    background-color: $text;
                 }
 
                 .cell-error {
@@ -140,7 +141,7 @@ button, input {
                 }
 
                 .ship {
-                    background-color: #f2f2f2;
+                    background-color: $ship;
                 }
             }
         }
@@ -155,22 +156,31 @@ button, input {
         h2 {
             font-size: 1.3rem;
         }
-
-        button {
-            border-radius: 1rem;
-            padding: 1rem;
-        }
     }
 
     #button-container {
         margin-top: 1rem;
 
         #reset-button {
-            border-color: #694d81;
+            border-color: $clickable;
             border-width: 3px;
             padding-left: 1rem;
             padding-right: 1rem;
         }
+    }
+
+    #start-game-container {
+        margin-top: 1.5rem;
+        
+        #start-game {
+            border-width: 2px;
+            box-shadow: #D6D5A8 0px 1px 2px;
+        }
+    }
+
+    button {
+        border-radius: 1rem;
+        padding: 1rem;
     }
 }
 
