--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -256,3 +256,29 @@ button:hover, button:focus {
     }
 }
 
+#end-screen {
+    height: 100%;
+    margin: 1rem 2rem 4rem;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: space-around;
+
+    #winner-section::first-line {
+        font-size: 1.4rem;
+    }
+
+    #winner-name {
+        font-size: 3rem;
+        font-weight: 900;
+    }
+
+    button {
+        font-size: 1.2rem;
+        text-align: center;
+        border-radius: 1rem;
+        padding: 0.5rem;
+        border-width: 2px;
+        box-shadow: #D6D5A8 0px 1px 2px;
+    }
+}
