--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -282,3 +282,60 @@ button:hover, button:focus {
         box-shadow: #D6D5A8 0px 1px 2px;
     }
 }
+
+@media (min-width: 600px) {
+    $cell-size: 48px;
+    label, button {
+        font-size: 1.4rem !important;
+    }
+
+    input {
+        font-size: 1.6rem !important;
+        width: auto !important;
+    }
+
+    #setup-container {
+        margin: 0 10vw !important;
+    }
+
+    #start-button {
+        width: 20rem;
+    }
+
+    .grid {
+        .cell {
+            width: $cell-size !important;
+            height: $cell-size !important;
+        }
+    }
+
+    .attacked::after {
+        $size: calc($cell-size / 3);
+        height: $size !important;
+        width: $size !important;
+        top: calc($cell-size / 2 - $size / 2) !important;
+        left: calc($cell-size / 2 - $size / 2) !important;
+    }
+}
+
+@media (min-width: 1200px) {
+    #move-container {
+        flex: 1 0 100% !important;
+
+        #move {
+            min-height: 4rem !important;
+        }
+    }
+    
+    #setup-container {
+        margin: 0 20vw !important;
+    }
+
+    #game-screen {
+        flex-direction: row !important;
+        flex-wrap:wrap;
+        align-items: center;
+        justify-content: center;
+        column-gap: 4rem;
+    }
+}
